# data-analysis-platform-bak

./: .dockerignore  .env  .env.development  .gitignore  Dockerfile  README.md  app_config.json  app_config_dev.json  data_generator.py  data_recorder.py  initial_config.json  manage.py  mypy.ini  package-lock.json  package.json  prestart.sh  profile_reader.py  pyproject.toml  pytest.ini  requirements.txt  requirements_pip.txt  sample.py  sample.txt  sample2.py  test_manage.py
.git_/: config  index
.git_/logs/: HEAD
.github/workflows/: python-app.yml
alembic/: env.py
backend/: Pipfile  __init__.py  alembic.ini  app_config_docker.json  config.py  manage.py  mypy.ini  requirements.txt  views.py
backend/alembic/: env.py
backend/analyzer/: analyzer.py  fft_tools.py  h_one_extract_features.py
backend/app/: __init__.py  alembic.ini  main.py
backend/common/: common.py  common_logger.py  dao.py  db_session.py  error_message.py  logging.conf
backend/config_file_manager/: config_file_manager.py
backend/cut_out_shot/: cut_out_shot.py  displacement_cutter.py  pulse_cutter.py  stroke_displacement_cutter.py
backend/dash_app/: brew_features.py  constants.py  data_accessor.py  fft_tools.py  plotly_utils.py  preprocess_view.py  preprocessors.py
backend/data_collect_manager/: __init__.py  main.py  views.py
backend/data_converter/: data_converter.py
backend/data_importer/: data_importer.py
backend/data_reader/: data_reader.py
backend/data_recorder/: data_recorder.py
backend/elastic_manager/: elastic_manager.py
backend/event_manager/: event_manager.py
backend/file_manager/: file_manager.py
backend/logger/: logger.py
backend/mappings/: mapping_rawdata.json  setting_rawdata.json
backend/models/: es_wrapper.py  monitor.py  reporting.py
backend/tag_manager/: tag_manager.py
backend/templates/: index.html  layout.html  (+2 more)
common/: settings.json
cut_out_shot/: cut_out_shot.py
data_collect_manager/: __init__.py  config.py  views.py
data_recorder/: data_recorder.py  settings.json
docker/: .env.development  Dockerfile  celery.dockerfile  copy_dist_dir.sh  docker-compose.frontend.yml  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  dsl_generator.dockerfile  elasticsearch.dockerfile  fluent.conf  fluentd.dockerfile  frontend.dockerfile  jupyter.dockerfile  metricbeat.docker.yml  metricbeat.dockerfile  mlflow.dockerfile  webap.dockerfile
dsl_generator/: dsl_generator.py  fft_tools.py  plotly_utils.py
elasticstack/: Dockerfile  docker-compose.yml
frontend/: .env.development  .env.production  .eslintrc.js  .gitignore  package-lock.json  package.json  vue.config.js
mappings/: mapping_rawdata.json  mapping_resample.json  mapping_shots.json  mapping_shots_meta.json  setting_rawdata.json  setting_shots.json
notebooks/: analyze-Copy1.ipynb  analyze-Copy2.ipynb  analyze.ipynb  brew_features.py  contour_test.ipynb  cut_out_shot.ipynb  data_duplicate.ipynb  data_duplicate.py  data_import.ipynb  data_import_j.ipynb  data_importer.py  elastic_manager.py  helper_for_test.py  import_allwave(切り出しなし).ipynb  import_allwave.ipynb  mapping_rawdata.json  mapping_shots.json  operation.ipynb  rawdata_import.ipynb  setting_rawdata.json  test_data_importer.py  test_data_reader.py  time_logger.py  tmp_shot_analy_create.py  特徴抽出多チャンネル拡張プロト.ipynb
src/: manage.py
tests/: conftest.py
utils/: common.py  cut_out_shot.py  data_duplicate.py  data_importer.py  data_reader.py  data_recorder.py  elastic_manager.py  rawdata_importer.py  throughput_counter.py  time_logger.py  tmp_shot_analy_create.py
vega/: break_ts_scatter_plot.json  break_ys_scatter_plot.json  def_vega_load_3.json  detail.json  experiment_scatter_plot_matrix.json  max_ts_scatter_plot.json  max_ys_scatter_plot.json  overwriting_A.json  overwriting_B.json  overwriting_group.json  scatter_plot_matrix.json  shots_detail.json  shots_load_distribution.json  start_break_diff_box_plot.json  start_break_time_diff_shot.json  start_ts_scatter_plot.json  start_ys_scatter_plot.json  vega_break_contour.json  vega_contour_001.json  vega_max_contour.json  vega_start_contour.json
(+363 files in other folders)
