[tool.poetry]
name = "data-analysis-platform"
version = "0.1.0"
description = ""
authors = ["rfujimoto3 <rei.fujimoto@uniadex.co.jp>"]

[tool.poetry.dependencies]
python = "^3.8.12"
aiofiles = "^0.7.0"
aiohttp = "^3.7.4.post0"
aiohttp-cors = "^0.7.0"
alembic = "^1.4.1"
altair = "^4.1.0"
appdirs = "^1.4.4"
argon2-cffi = "^20.1.0"
asgiref = "^3.4.1"
astor = "^0.8.1"
async-generator = "^1.10"
async-timeout = "^3.0.1"
attrs = "^21.2.0"
backcall = "^0.2.0"
base58 = "^2.1.0"
BentoML = "^0.13.1"
bleach = "^4.0.0"
blinker = "^1.4"
bokeh = "^2.3.3"
boto3 = "^1.18.51"
botocore = "^1.21.51"
cachetools = "^4.2.2"
Cerberus = "^1.3.4"
certifi = "^2021.5.30"
cffi = "^1.14.6"
chardet = "^4.0.0"
charset-normalizer = "^2.0.4"
cloudpickle = "^2.0.0"
configparser = "^5.0.2"
contextlib2 = "^21.6.0"
cycler = "^0.10.0"
databricks-cli = "^0.15.0"
debugpy = "^1.4.1"
decorator = "^5.0.9"
deepmerge = "^0.3.0"
defusedxml = "^0.7.1"
docker = "^5.0.2"
elasticsearch = "^7.13.3"
entrypoints = "^0.3"
fastapi = "^0.68.1"
flake8 = "^3.9.2"
gitdb = "^4.0.7"
GitPython = "^3.1.18"
greenlet = "^1.1.1"
httptools = "^0.2.0"
grpcio = "^1.41.0"
gunicorn = "^20.1.0"
h11 = "^0.12.0"
humanfriendly = "^10.0"
idna = "^3.2"
importlib-metadata = "^4.8.1"
iniconfig = "^1.1.1"
ipykernel = "^6.1.0"
ipython = "^7.26.0"
ipython-genutils = "^0.2.0"
ipywidgets = "^7.6.3"
itsdangerous = "^2.0.1"
jedi = "^0.18.0"
jmespath = "^0.10.0"
joblib = "^1.0.1"
jsonschema = "^3.2.0"
jupyter = "^1.0.0"
jupyter-client = "^6.1.12"
jupyter-console = "^6.4.0"
jupyter-core = "^4.7.1"
jupyterlab-pygments = "^0.1.2"
jupyterlab-widgets = "^1.0.0"
kiwisolver = "^1.3.1"
Mako = "^1.1.5"
MarkupSafe = "^2.0.1"
matplotlib = "^3.4.2"
matplotlib-inline = "^0.1.2"
mccabe = "^0.6.1"
mistune = "^0.8.4"
mlflow = "^1.20.2"
multidict = "^5.1.0"
nbclient = "^0.5.3"
nbconvert = "5.6.1"
nbformat = "^5.1.3"
nest-asyncio = "^1.5.1"
notebook = "^6.4.3"
numpy = "^1.21.0"
packaging = "^21.0"
pandas = "^1.3.2"
pandocfilters = "^1.4.3"
parso = "^0.8.2"
pathspec = "^0.9.0"
pexpect = "^4.8.0"
pickleshare = "^0.7.5"
Pillow = "^8.3.1"
pluggy = "^0.13.1"
prompt-toolkit = "^3.0.19"
protobuf = "^3.17.3"
psutil = "^5.8.0"
ptyprocess = "^0.7.0"
py = "^1.10.0"
pyarrow = "^5.0.0"
pycparser = "^2.20"
pydantic = "^1.8.2"
pydeck = "^0.7.0"
Pygments = "^2.10.0"
pyparsing = "^2.4.7"
pyrsistent = "^0.18.0"
python-dateutil = "^2.8.2"
python-editor = "^1.0.4"
python-json-logger = "^2.0.2"
pytz = "^2021.1"
PyYAML = "^5.3.1"
pyzmq = "^22.2.1"
qtconsole = "^5.1.1"
QtPy = "^1.9.0"
querystring-parser = "^1.2.4"
regex = "^2021.8.3"
requests = "^2.26.0"
s3transfer = "^0.5.0"
schema = "^0.7.4"
scikit-learn = "^1.0"
scipy = "^1.6.1"
seaborn = "^0.11.2"
Send2Trash = "^1.8.0"
simple-di = "^0.1.1"
six = "^1.16.0"
smmap = "^4.0.0"
SQLAlchemy = "^1.3.24"
SQLAlchemy-Utils = "^0.36.7"
sqlparse = "^0.4.2"
starlette = "^0.14.2"
tabulate = "^0.8.9"
terminado = "^0.11.0"
testpath = "^0.5.0"
threadpoolctl = "^2.2.0"
toml = "^0.10.2"
tomli = "^1.2.1"
toolz = "^0.11.1"
tornado = "^6.1"
tqdm = "^4.61.2"
traitlets = "^5.0.5"
types-python-dateutil = "^0.1.4"
types-PyYAML = "^5.4.6"
typing-extensions = "^3.10.0.0"
tzlocal = "^3.0"
urllib3 = "^1.25.11"
uvicorn = "^0.15.0"
uvloop = "^0.16.0"
validators = "^0.18.2"
watchdog = "^2.1.5"
watchgod = "^0.7"
wcwidth = "^0.2.5"
webencodings = "^0.5.1"
websockets = "^10.0"
websocket-client = "^1.2.1"
Werkzeug = "^2.0.1"
widgetsnbextension = "^3.5.1"
yarl = "^1.6.3"
zipp = "^3.5.0"
celery = "^5.2.1"
redis = "^4.0.2"
librabbitmq = "^2.0.0"
python-dotenv = "^0.19.2"
python-multipart = "^0.0.5"
japanize-matplotlib = "^1.1.3"
jupyter-contrib-nbextensions = "^0.5.1"
dash = "^2.4.1"
dash-bootstrap-components = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^21.7b0"
isort = "^5.10.1"
mypy = "^0.910"
mypy-extensions = "^0.4.3"
pycodestyle = "^2.7.0"
pyflakes = "^2.3.1"
pytest = "^6.2.4"
pytest-env = "^0.6.2"
pytest-mock = "^3.6.1"
types-requests = "^2.26.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
